--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,30 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.kundla</groupId>
     <artifactId>project-2</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Project 2</name>
-    <description>A simple Java project for Jenkins CI/CD</description>
+    <description>Sample Java project for Jenkins CI/CD</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <!-- Add your dependencies here -->
-    </dependencies>
-
     <build>
         <plugins>
-            <!-- Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
