--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [tomcat]
-3.27.120.103 ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/ansible-key.pem
+3.27.120.103 ansible_user=ec2-user ansible_ssh_private_key_file=/path/to/key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
