--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [tomcat]
-3.27.120.103 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/.ssh/ansible-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+3.27.120.103 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/.ssh/sandhya-deploy-key ansible_ssh_common_args='-o StrictHostKeyChecking=no'
