--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [tomcat]
-54.253.24.244 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/.ssh/sandhya-deploy-key ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+54.253.24.244 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/.ssh/ssh-sandhya.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
